--- a/GrecosQuestionnaire/Views/Administration/CreateRole.cshtml
+++ b/GrecosQuestionnaire/Views/Administration/CreateRole.cshtml
@@ -1,4 +1,4 @@
-﻿@model GrecosQuestionnaire.ViewModel.RoleViewModel
+﻿@model GrecosQuestionnaire.ViewModel.CreateRoleViewModel
 
 <form method="post">
 
