--- a/GrecosQuestionnaire/Views/Account/Index.cshtml
+++ b/GrecosQuestionnaire/Views/Account/Index.cshtml
@@ -1,24 +1,26 @@
-﻿@model IEnumerable<GrecosQuestionnaire.ViewModel.UserViewModel>
+﻿@model IEnumerable<Microsoft.AspNetCore.Identity.IdentityUser>
 
 @{
     ViewData["Title"] = "Użytkownicy systemu";
 }
 
-    <table class="table table-striped table-hover">
-        <thead>
+
+
+<table class="table table-striped table-hover">
+    <thead>
+        <tr>
+            <th>Email</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
             <tr>
-                <th>Email</th>
+                <td>
+                    @item.Email
+                </td>
             </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <td>
-                        @item.Email
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
+        }
+    </tbody>
+</table>
 
