--- a/GrecosQuestionnaire/Views/Administration/Index.cshtml
+++ b/GrecosQuestionnaire/Views/Administration/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<GrecosQuestionnaire.ViewModel.RoleViewModel>
+﻿@model IEnumerable<Microsoft.AspNetCore.Identity.IdentityRole>
 
 @{
     ViewData["Title"] = "Role użytkowników";
 }
 
-<table class="table table-striped table-hover">
+@*<table class="table table-striped table-hover">
     <thead>
         <tr>
             <th>Rola</th>
@@ -15,10 +15,48 @@
         {
             <tr>
                 <td>
-                    @item.RoleName
+                    @item.Name
                 </td>
             </tr>
         }
     </tbody>
-</table>
+</table>*@
 
+@if (Model.Any())
+{
+    <a class="btn btn-primary mb-3" style="width:auto" asp-controller="administration" asp-action="createrole">Add new role</a>
+
+    foreach (var role in Model)
+    {
+        <div class="card mb-3">
+            <div class="card-header">
+                Role id :  @role.Id
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">@role.Name</h5>
+            </div>
+            <div class="card-footer">
+                <a class="btn btn-primary" asp-action="Edit" asp-controller="Administration" asp-route-id="@role.Id">Edit</a>
+                <a href="#" class="btn btn-primary">Delete</a>
+            </div>
+        </div>
+    }
+}
+
+else
+
+{
+    <div class="card">
+        <div class="card-header">
+            No roles created yet
+        </div>
+        <div class="card-body">
+            <h5 class="card-title">
+                Use the button below to create a role
+            </h5>
+            <a class="btn btn-primary" style="width:auto" asp-controller="administration" asp-action="createrole">
+                Create Role
+            </a>
+        </div>
+    </div>
+}
