--- a/GrecosQuestionnaire/Views/Administration/Edit.cshtml
+++ b/GrecosQuestionnaire/Views/Administration/Edit.cshtml
@@ -49,8 +49,8 @@
                 }
             </div>
             <div class="card-footer">
-                <a href="#" class="btn btn-primary">Delete</a>
-                <a href="#" class="btn btn-primary">Delete</a>
+                <a asp-action="EditUsersInRole" asp-controller="Administration" asp-route-roleId="@Model.Id" class="btn btn-primary" style="width:auto">Add or remove users</a>
+
             </div>
         </div>
 
