--- a/GrecosQuestionnaire/Views/Administration/Index.cshtml
+++ b/GrecosQuestionnaire/Views/Administration/Index.cshtml
@@ -4,24 +4,6 @@
     ViewData["Title"] = "Role użytkowników";
 }
 
-@*<table class="table table-striped table-hover">
-    <thead>
-        <tr>
-            <th>Rola</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @item.Name
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>*@
-
 @if (Model.Any())
 {
     <a class="btn btn-primary mb-3" style="width:auto" asp-controller="administration" asp-action="createrole">Add new role</a>
@@ -36,8 +18,19 @@
                 <h5 class="card-title">@role.Name</h5>
             </div>
             <div class="card-footer">
-                <a class="btn btn-primary" asp-action="Edit" asp-controller="Administration" asp-route-id="@role.Id">Edit</a>
-                <a href="#" class="btn btn-primary">Delete</a>
+                <form asp-action="Delete" asp-controller="Administration" asp-route-id="@role.Id" method="post">
+                    <a class="btn btn-primary" asp-action="Edit" asp-controller="Administration" asp-route-id="@role.Id">Edit</a>
+                    
+                    <span id="confirmDeleteSpan_@role.Id" style="display:none">
+                          <span> Are you sure you want to delete?</span>
+                    <button type="submit" class="btn btn-danger">Yes</button>
+                    <a href="#" class="btn btn-primary" onclick="confirmDelete('@role.Id', false)">No</a>
+                    </span>
+
+                    <span id="deleteSpan_@role.Id">
+                        <a href="#" class="btn btn-primary" onclick="confirmDelete('@role.Id', true)">Delete</a>
+                    </span>
+                </form>
             </div>
         </div>
     }
@@ -59,4 +52,8 @@ else
             </a>
         </div>
     </div>
+}
+
+@section Scripts {
+    <script src="~/js/site.js"></script>
 }
