--- a/GrecosQuestionnaire/Views/Account/Index.cshtml
+++ b/GrecosQuestionnaire/Views/Account/Index.cshtml
@@ -1,26 +1,38 @@
 ﻿@model IEnumerable<Microsoft.AspNetCore.Identity.IdentityUser>
 
 @{
-    ViewData["Title"] = "Użytkownicy systemu";
+    ViewData["Title"] = "Users";
 }
 
+@if (Model.Any())
+{
+    <a class="btn btn-primary mb-3" style="width:auto" asp-controller="account" asp-action="register">Add new user</a>
 
+    foreach (var user in Model)
+    {
+        <div class="card mb-3">
+            <div class="card-body">
+                @user.Email
+            </div>
+        </div>
+    }
+}
 
-<table class="table table-striped table-hover">
-    <thead>
-        <tr>
-            <th>Email</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @item.Email
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+else
+
+{
+    <div class="card">
+        <div class="card-header">
+            No roles created yet
+        </div>
+        <div class="card-body">
+            <h5 class="card-title">
+                Use the button below to create a user
+            </h5>
+            <a class="btn btn-primary" style="width:auto" asp-controller="account" asp-action="register">
+                Create User
+            </a>
+        </div>
+    </div>
+}
 
