--- a/GrecosQuestionnaire/Views/Account/Register.cshtml
+++ b/GrecosQuestionnaire/Views/Account/Register.cshtml
@@ -30,7 +30,7 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-primary" value="Dodaj użytkownika" />
+            <input type="submit" class="btn btn-primary" value="Add user" />
         </div>
     </div>
 </form>
