--- a/GrecosQuestionnaire/Views/Account/Edit.cshtml
+++ b/GrecosQuestionnaire/Views/Account/Edit.cshtml
@@ -48,7 +48,7 @@
 
             }
             <div class="card-footer">
-                <a asp-action="EditUsersPartners" asp-controller="Account" asp-route-roleId="@Model.Id" class="btn btn-primary" style="width:auto">Add or remove users</a>
+                <a asp-action="EditPartnerInUser" asp-controller="Account" asp-route-userId="@Model.Id" class="btn btn-primary" style="width:auto">Add or remove partners</a>
 
             </div>
         </div>
