--- a/GrecosQuestionnaire/Views/Administration/EditUsersInRole.cshtml
+++ b/GrecosQuestionnaire/Views/Administration/EditUsersInRole.cshtml
@@ -26,8 +26,7 @@
             </div>
             <div class="card-footer">
                 <input type="submit" value="Update" class="btn btn-primary" style="width:auto" />
-                <a asp-action="EditRole" asp-route-roleId="@roleId" class="btn btn-primary" style="width:auto">Cancel</a>
-
+                <a class="btn btn-primary" asp-action="Edit" asp-controller="Administration" asp-route-id="@roleId" style="width:auto">Cancel</a>
             </div>
         </div>
     </form>
