--- a/GrecosQuestionnaire/Views/Account/Index.cshtml
+++ b/GrecosQuestionnaire/Views/Account/Index.cshtml
@@ -14,7 +14,7 @@
             <div class="card-body">
                 <form asp-action="Delete" asp-controller="Administration" asp-route-id="@user.Id" method="post">
                     <a class="card-title">@user.Email </a>
-                    <a class="btn btn-primary" asp-action="EditUser" asp-controller="Account" asp-route-id="@user.Id">Edit</a>
+                    <a class="btn btn-primary" asp-action="Edit" asp-controller="Account" asp-route-id="@user.Id">Edit</a>
                 </form>
             </div>
         </div>
