--- a/GrecosQuestionnaire/Views/Question/Index.cshtml
+++ b/GrecosQuestionnaire/Views/Question/Index.cshtml
@@ -15,7 +15,7 @@
     </div>
 </div>
 
-@Html.ActionLink("Wróć do panelu administratora", "Index", "Admin", null, null)
+@Html.ActionLink("Wróć do panelu administratora", "Index", "Home", null, null)
 
 <table class="table table-striped table-hover">
     <thead>
