--- a/GrecosQuestionnaire/Views/QuestionItem/Index.cshtml
+++ b/GrecosQuestionnaire/Views/QuestionItem/Index.cshtml
@@ -17,6 +17,9 @@
 
 @Html.ActionLink("Wróć do listy pytań", "Index", "Question")
 
+@{
+    var questionId = ViewBag.QuestionId;
+}
 <table class="table table-striped table-hover">
     <thead>
         <tr>
@@ -54,6 +57,6 @@
     </tbody>
 </table>
 
-@Html.PagedListPager(Model, page => Url.Action("Index", new { page, f = ViewBag.f }))
+@Html.PagedListPager(Model, page => Url.Action("Index", new { page, questionId, f = ViewBag.f }))
 
 Elementów: @ViewBag.Count
