--- a/GrecosQuestionnaire/Views/MyHotels/Index.cshtml
+++ b/GrecosQuestionnaire/Views/MyHotels/Index.cshtml
@@ -45,14 +45,14 @@
             <td>
                 @if (item.Response == true)
                 {
-                <a class="btn btn-primary" href="@Url.Action("Edit", "Survey", new { hotelId = @item.Id }, null)" title="Elementy">
+                <a class="btn btn-primary" href="@Url.Action("Edit", "Survey", new { hotel = @item.Id }, null)" title="Elementy">
                     Edit
                     <span class="glyphicon glyphicon-edit"></span>
                 </a>
                 }
                 else
                 {
-                <a class="btn btn-primary" href="@Url.Action("Index", "Survey", new { hotelId = @item.Id }, null)" title="Elementy">
+                <a class="btn btn-primary" href="@Url.Action("Index", "Survey", new { hotel = @item.Id }, null)" title="Elementy">
                 New
                 <span class="glyphicon glyphicon-th-list"></span>
                 </a>
