--- a/GrecosQuestionnaire/Views/Survey/Index.cshtml
+++ b/GrecosQuestionnaire/Views/Survey/Index.cshtml
@@ -12,23 +12,6 @@
 @{
     int page = int.Parse(ViewData["page"].ToString());
     int hotel = ViewBag.Hotel;
-    //int hotel;
-    //int? hotelIsNull = ViewBag.Hotel;
-    //if (page == 1)
-    //{
-    //    if (hotelIsNull !=0)
-    //    {
-    //        hotel = ViewBag.Hotel;
-    //    }
-    //    else
-    //    {
-    //        hotel = int.Parse(TempData["hotel"].ToString());
-    //    }
-    //}
-    //else
-    //{
-    //    hotel = int.Parse(TempData["hotel"].ToString());
-    //}
 }
 
 <div class="col-md-8" style="margin-top: 40px;">
@@ -207,6 +190,79 @@
                         </div>
                         <div class="clearfix"></div>
                     }
+                    else if (item.QuestionItemType == QuestionItemType.Rate7)
+                    {
+                        if (!string.IsNullOrEmpty(item.Title))
+                        {
+                            <div class="col-md-@(12 - item.Parts) col-xs-@(12 - item.Parts)" style="padding-left: 5px; @(i > 0 ? "margin-top: 8px;" : "padding-top: 13px")">
+                                @item.Title
+                            </div>
+                        }
+
+                        <div class="col-md-@item.Parts col-xs-@item.Parts" style="padding-left: 5px; @(i > 0 ? "margin-top: 8px;" : "")">
+                            <div class="row" style="font-size: 10px; text-align: center; white-space: nowrap;">
+                                <div class="col-md-2 col-xs-2" style="padding: 0; padding-left: 5px;">
+                                    @((item.Items != null && item.Items.Split('\n').Length > 0) ? @item.Items.Split('\n')[0] : string.Empty)
+                                </div>
+                                <div class="col-md-2 col-xs-2" style="padding: 0; padding-left: 3px;">
+                                    @((item.Items != null && item.Items.Split('\n').Length > 1) ? @item.Items.Split('\n')[1] : string.Empty)
+                                </div>
+                                <div class="col-md-2 col-xs-2" style="padding: 0;">
+                                    @((item.Items != null && item.Items.Split('\n').Length > 2) ? @item.Items.Split('\n')[2] : string.Empty)
+                                </div>
+                                <div class="col-md-2 col-xs-2" style="padding: 0;">
+                                    @((item.Items != null && item.Items.Split('\n').Length > 3) ? @item.Items.Split('\n')[3] : string.Empty)
+                                </div>
+                                <div class="col-md-2 col-xs-2" style="padding: 0;">
+                                    @((item.Items != null && item.Items.Split('\n').Length > 4) ? @item.Items.Split('\n')[4] : string.Empty)
+                                </div>
+                                <div class="col-md-2 col-xs-2" style="padding: 0;">
+                                    @((item.Items != null && item.Items.Split('\n').Length > 5) ? @item.Items.Split('\n')[5] : string.Empty)
+                                </div>
+                                <div class="col-md-2 col-xs-2" style="padding: 0;">
+                                    @((item.Items != null && item.Items.Split('\n').Length > 6) ? @item.Items.Split('\n')[6] : string.Empty)
+                                </div>
+                            </div>
+                            <div class="row" style="text-align: center; padding-left: 5px;">
+                                <div class="col-md-2 col-xs-2" style="padding: 0;">
+                                    <input type="radio" name="@item.Id" id="test1" value="1"
+                                           @(itemValue == "1" ? "checked='checked'" : string.Empty) />
+
+                                </div>
+                                <div class="col-md-2 col-xs-2" style="padding: 0;">
+                                    <input type="radio" name="@item.Id" id="test2" value="2"
+                                           @(itemValue == "2" ? "checked='checked'" : string.Empty) />
+
+                                </div>
+                                <div class="col-md-2 col-xs-2" style="padding: 0;">
+                                    <input type="radio" name="@item.Id" id="test3" value="3"
+                                           @(itemValue == "3" ? "checked='checked'" : string.Empty) />
+
+                                </div>
+                                <div class="col-md-2 col-xs-2" style="padding: 0;">
+                                    <input type="radio" name="@item.Id" id="test4" value="4"
+                                           @(itemValue == "4" ? "checked='checked'" : string.Empty) />
+
+                                </div>
+                                <div class="col-md-2 col-xs-2" style="padding: 0;">
+                                    <input type="radio" name="@item.Id" id="test5" value="5"
+                                           @(itemValue == "5" ? "checked='checked'" : string.Empty) />
+
+                                </div>
+                                <div class="col-md-2 col-xs-2" style="padding: 0;">
+                                    <input type="radio" name="@item.Id" id="test6" value="6"
+                                           @(itemValue == "6" ? "checked='checked'" : string.Empty) />
+
+                                </div>
+                                <div class="col-md-2 col-xs-2" style="padding: 0;">
+                                    <input type="radio" name="@item.Id" id="test7" value="7"
+                                           @(itemValue == "7" ? "checked='checked'" : string.Empty) />
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="clearfix"></div>
+                    }
                     else if (item.QuestionItemType == QuestionItemType.Rate2)
                     {
                         if (!string.IsNullOrEmpty(item.Title))
@@ -253,7 +309,6 @@
 
                         <div class="clearfix"></div>
                     }
-
                     else if (item.QuestionItemType == QuestionItemType.Rate4)
                     {
                         if (!string.IsNullOrEmpty(item.Title))
@@ -722,6 +777,14 @@
             $('div.show5').hide();
             $('div.show6').hide();
             $('div.show7').hide();
+            $('div.show8').hide();
+            $('div.show9').hide();
+            $('div.show10').hide();
+            $('div.show11').hide();
+            $('div.show12').hide();
+            $('div.show13').hide();
+            $('div.show14').hide();
+            $('div.show15').hide();
 
             $('.spinner').spinner({
                 spin: function (event, ui) {
@@ -791,6 +854,71 @@
         $(document).on("change", "input.hide7", function () {
             $('div.show7').hide('slow');
         });
+
+        $(document).on("change", "input.show8", function () {
+            $('div.show8').show('slow');
+        });
+
+        $(document).on("change", "input.hide8", function () {
+            $('div.show8').hide('slow');
+        });
+
+        $(document).on("change", "input.show9", function () {
+            $('div.show9').show('slow');
+        });
+
+        $(document).on("change", "input.hide9", function () {
+            $('div.show9').hide('slow');
+        });
+
+        $(document).on("change", "input.show10", function () {
+            $('div.show10').show('slow');
+        });
+
+        $(document).on("change", "input.hide10", function () {
+            $('div.show10').hide('slow');
+        });
+
+        $(document).on("change", "input.show11", function () {
+            $('div.show11').show('slow');
+        });
+
+        $(document).on("change", "input.hide11", function () {
+            $('div.show11').hide('slow');
+        });
+
+        $(document).on("change", "input.show12", function () {
+            $('div.show12').show('slow');
+        });
+
+        $(document).on("change", "input.hide12", function () {
+            $('div.show12').hide('slow');
+        });
+
+        $(document).on("change", "input.show13", function () {
+            $('div.show13').show('slow');
+        });
+
+        $(document).on("change", "input.hide13", function () {
+            $('div.show13').hide('slow');
+        });
+
+        $(document).on("change", "input.show14", function () {
+            $('div.show14').show('slow');
+        });
+
+        $(document).on("change", "input.hide14", function () {
+            $('div.show14').hide('slow');
+        });
+
+        $(document).on("change", "input.show15", function () {
+            $('div.show15').show('slow');
+        });
+
+        $(document).on("change", "input.hide15", function () {
+            $('div.show15').hide('slow');
+        });
+
 
         (function ($) {
             // http://itmeze.com/2010/12/checkbox-has-to-be-checked-with-unobtrusive-jquery-validation-and-asp-net-mvc-3/
